[project]
name = "tavily_company_researcher"
version = "0.0.1"
description = "Starter template for a company research agent using Tavily and Langgraph."
authors = [
    { name = "Tavily", email = "support@tavily.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "langchain-core",
    "langchain-openai",
    "langgraph",
    "tavily-python",
    "pydantic",
    "cohere"
]

[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tavily.templates.company_researcher", "company_researcher"]
[tool.setuptools.package-dir]
"tavily.templates.company_researcher" = "src/company_researcher"
"company_researcher" = "src/company_researcher"


[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"

